@@ -1,3 +1,11 @@
+TAG: qcreports_db-6-0-18-8
+DATE: 03/23/2022
+STAFF: lec
+wts2-703/new Noctua -> GO Annotation pipeline
+#	modified:   qcnightly_reports.csh
+remove: mgidbmigration/tr13272/go_cam.csh
+remove: weekly/PHENO_Features.py per Allele Relationship PWI
+
 TAG: qcreports_db-6-0-18-7
 TAG: qcreports_db-6-0-18-6
 DATE: 02/21/2022
